# Agent-Misalignment-from-Unreliable-Tool-Behavior

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: cache.py  figure_2_main_results.ipynb  paper_plots_generation.ipynb  plotting.py  single_eval_logs.py  swe-bench-eda.ipynb  task_decomposition_plot.py  test_loader.ipynb  utils.py  visualization.ipynb
notebook/: visualization.ipynb
src/impossiblebench/: __init__.py  compose.yaml  livecodebench_agent_full.py  livecodebench_agent_mini.py  livecodebench_scorers.py  livecodebench_tasks.py  swebench_agent_full.py  swebench_agent_mini.py  swebench_build_images.py  swebench_dummytest.py  swebench_scorers.py  swebench_tasks.py  unreliable_tools.py
src/impossiblebench/analysis/: __init__.py  data_loader.py  example_usage.py  llm_judge.py  test_data_loader.py
src/impossiblebench/unreliable_tools/: __init__.py  tool_injection.py  tool_unreliability.py
