[project]
name = "impossiblebench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "anthropic>=0.40.0",
    "datasets>=3.0.0",
    "inspect-ai>=0.3.0",
    "inspect-evals[swe-bench]",
    "jsonlines>=4.0.0",
    "litellm>=1.50.0",
    "pandas>=2.0.0",
    "platformdirs>=4.0.0",
    "swebench>=4.0.0",
    "tqdm>=4.60.0",
]

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"